# steel-design-predictor

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LAUNCH_GUIDE.md  LICENSE  PRESENTATION_GUIDE.md  QUICKSTART.md  README.md  SUCCESS.md  app.py  generate_dataset.py  prepare_demo.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_setup.py  train_model.py
data/: sample_template.csv  steel_data.csv
demo/: CHECKLIST.md  demo_compositions.txt
models/: scaler.pkl  selected_features.pkl
src/: __init__.py  config.py  data_loader.py  exceptions.py  feature_engineering.py  inverse_design.py  logger.py  pcnn_model.py  uncertainty.py  utils.py
steel-design-predictor/: CONTRIBUTING.md  LICENSE  README.md  app.py  generate_dataset.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  train_model.py
steel-design-predictor/data/: sample_template.csv  steel_data.csv
steel-design-predictor/models/: feature_engineer.pkl  pcnn_model.pt  pcnn_model_scaler.pkl
steel-design-predictor/src/: __init__.py  config.py  data_loader.py  exceptions.py  feature_engineering.py  inverse_design.py  logger.py  pcnn_model.py  uncertainty.py  utils.py
steel-design-predictor/tests/: conftest.py  test_config.py  test_exceptions.py  test_pcnn_model.py  test_utils.py
tests/: conftest.py  test_config.py  test_exceptions.py  test_pcnn_model.py  test_utils.py
